<resources>
    <string name="app_name">تطبيق الجامعات</string>
    <string name="section">الشعبة</string>
    <string name="student">الطالب</string>
    <string name="login">تسجيل دخول</string>
    <string name="username">رقم الهاتف او اسم المستخدم</string>
    <string name="card_no">رقم الهوية</string>
    <string name="login_as_user">تسجيل كمسخدم</string>
    <string name="resend">اعادة ارسال</string>
    <string name="forgot_card_no">هل نسيت رقم الهوية ؟</string>
    <string name="notifications">الاشعارات</string>
    <string name="token_expire">انتهت صلاحية تسجيلك يرجى اعادة تسجيل الدخول</string>
    <string name="schedule">الجدول</string>
    <string name="lessons">المحاضرات</string>
    <string name="bg_trans">background_transition</string>
    <string name="logo_trans">logo_transition</string>
    <string name="app_logo">شعار التطبيق</string>
    <string name="library">المكتبة</string>
    <string name="title">العنوان</string>
    <string name="adverts">الاعلانات</string>
    <string name="week_days">ايام الاسبوع</string>
    <string name="lessons_time">اوقات المحاظرات</string>
    <string name="teacher_homeworks">واجبات الاستاذ</string>
    <string name="available_books">الكتب المتوفة حالياً</string>
    <string name="sectios">الاقسام</string>
    <string name="homework_details">تفاصيل الواجب</string>
    <string name="show_pic">عرض الصورة</string>
    <string name="not_valid_pdf">الملف غير صالح</string>
    <string name="homeworks">الواجبات</string>
    <string name="mustEnterPassword">يجب ادخال رمز المرور</string>
    <string name="mustEnterUsername">يجب ادخال اسم المستخدم او رقم الهاتف</string>
</resources>
