<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layoutDirection="rtl"
        tools:context=".activities.login.LoginActivity">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:transitionName="@string/logo_trans"
            android:src="@drawable/university"
            android:contentDescription="@string/app_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:paddingTop="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:elevation="10dp"
            android:background="@drawable/bg_linear"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:fontFamily="@font/bahij_the_sans_arabic_semi_bold"
                android:paddingEnd="120dp"
                android:paddingStart="120dp"
                android:text="@string/login"
                android:textColor="@color/colorText"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:elevation="20dp"
            android:paddingTop="10dp"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:background="@drawable/bg_linear"
            android:layout_weight="1"
            android:layout_height="0dp">
            <EditText
                android:id="@+id/username"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/username"
                android:drawablePadding="10dp"
                android:textSize="14sp"
                android:inputType="text"
                android:fontFamily="@font/bahij_the_sans_arabic_light"
                android:padding="20dp"
                android:elevation="3dp"
                android:drawableStart="@drawable/ic_phone_receiver"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/card_no"
                android:drawablePadding="10dp"
                android:textSize="14sp"
                android:textAlignment="viewStart"
                android:inputType="textPassword"
                android:fontFamily="@font/bahij_the_sans_arabic_light"
                android:padding="20dp"
                android:elevation="3dp"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_lock"
                />


            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                >

                <Button
                    android:id="@+id/loginbtn"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_button"
                    android:text="@string/login_as_user"
                    android:textSize="14sp"
                    android:fontFamily="@font/bahij_the_sans_arabic_bold"
                    android:paddingEnd="80dp"
                    android:elevation="5dp"
                    android:textColor="@android:color/white"
                    android:paddingStart="80dp"
                    />

                <ProgressBar
                    android:id="@+id/progressIndicator"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:elevation="2dp"
                    android:indeterminate="true"
                    android:indeterminateTint="@android:color/white"
                    android:visibility="invisible" />
            </FrameLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bahij_the_sans_arabic_plain"
                    android:text="@string/forgot_card_no"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/sendId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:fontFamily="@font/bahij_the_sans_arabic_extra_bold"
                    android:text="@string/resend"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"


                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>