<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:folding-cell="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="item"
            type="String" />
    </data>

    <com.ramotion.foldingcell.FoldingCell
        android:id="@+id/folding_cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="5dp"
        android:background="@drawable/bg_item"
        android:clipChildren="false"
        folding-cell:backSideColor="@color/colorText"
        android:clipToPadding="false"
        >


        <LinearLayout
            android:id="@+id/cell_content_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            android:visibility="gone">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item_header"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_homework2"
                    android:contentDescription="@string/teacher_homeworks" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:fontFamily="@font/bahij_the_sans_arabic_semi_bold"
                    android:text="@string/homework_details"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/myImage"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/test"
                    android:contentDescription="@string/homework_details" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:alpha="0.5"
                    android:background="@android:color/black"
                    android:fontFamily="@font/bahij_the_sans_arabic_extra_bold"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/show_pic"
                    android:textColor="@android:color/white" />
            </FrameLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:drawableStart="@drawable/ic_clock"
                    android:textColor="@color/colorText"
                    android:drawablePadding="25dp"
                    android:text="2020-10-02" />



            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@android:color/darker_gray"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book."
                    android:textDirection="rtl"
                    android:drawablePadding="25dp"
                    android:drawableStart="@drawable/ic_description"
                    android:textColor="@color/colorText"
                    android:layout_margin="15dp"
                    />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/cell_title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:padding="15dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:src="@drawable/ic_homework"
                android:contentDescription="@string/homework_details" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/bahij_the_sans_arabic_bold"
                    android:text="المادة"
                    android:textColor="@color/colorText"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/bahij_the_sans_arabic_extra_light"
                    android:text="وصف الواجب"
                    android:textColor="@color/colorText"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>


    </com.ramotion.foldingcell.FoldingCell>
</layout>